[package]
name = "geist_supervisor"
version = "0.1.1"
edition = "2021"
description = "geist_supervisor"
license = "MIT"
documentation = "https://docs.roc.camera"
homepage = "https://roc.camera"
repository = "https://github.com/faust-machines/roc_supervisor"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.94"
bytes = "1.0"
clap = { version = "4.5.23", features = ["derive"] }
fs_extra = "1.3.0"
log = "0.4.22"
reqwest = { version = "0.12.9", features = ["blocking", "json"] }
serde_json = "1.0.133"
tempfile = "3.14.0"
tracing = "0.1.41"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[[bin]]
name = "geist"
path = "src/main.rs"
